force-app/main/default/objects/QueryHistory__c/QueryHistory__c.object-meta.xml
<CustomObject>
    <label>Query History</label>
    <nameField>
        <displayFormat>QH-{0000}</displayFormat>
        <label>Query History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>