force-app/main/default/objects/QueryHistory__c/fields/Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time__c</fullName>
    <label>Execution Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>