force-app/main/default/objects/QueryHistory__c/fields/Generated_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Generated_SOQL__c</fullName>
    <label>Generated SOQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>