force-app/main/default/objects/QueryHistory__c/fields/Query_Date__c.field-meta.xml
<CustomField>
    <fullName>Query_Date__c</fullName>
    <label>Query Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>