force-app/main/default/objects/QueryHistory__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Query Histories</relationshipLabel>
    <relationshipName>QueryHistories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>