force-app/main/default/objects/QueryHistory__c/fields/User_Query__c.field-meta.xml
<CustomField>
    <fullName>User_Query__c</fullName>
    <label>User Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>